--- a/static/default.css
+++ b/static/default.css
@@ -365,6 +365,14 @@ img{
     display: block !important;
 }
 
+.sidebar .emojislink {
+	position: absolute;
+	bottom: 50px;
+	width: 100%;
+	height: 50px;
+	cursor: pointer;
+}
+
 .sidebar .settings {
     position: absolute;
     bottom: 0;
